[package]
name = "veritas"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "3.1", features = ["cargo"] }
tasvideos-api-rs = { path = "../tasvideos-api-rs" }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
zip = "0.6"
hex = "0.4"
#md5 = "0.7"
sha-1 = "0.10"
md-5 = "0.10"
base64ct = { version = "1.0.1", features = ["alloc"] } # zip depedency chain requires password-hash, which requires base64ct >=1, <1.1.0.
crossbeam = "0.8"