[package]
name = "veritas"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
alloc-cortex-m = "0.4"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
fugit = "0.3"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

#rp-pico = "0.4"
rp2040-pac = "0.4"
#rp2040-hal = { git = "https://github.com/rp-rs/rp-hal" }
rp2040-hal = { version = "0.8", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.2"
pio = "0.2"
pio-proc = "0.2"

heapless = "0.7"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

paste = "1.0"
num_enum = { version = "0.5", default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
#codegen-units = 1
#debug = 2
#debug-assertions = false
incremental = false
#lto = 'fat'
#opt-level = 3
#overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
