[package]
name = "veritas"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
clap = { version = "4.2", features = ["cargo", "derive"] }
tasvideos-api-rs = "0.2"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
bincode = "2.0.0-rc.3"
zip = "0.6"
flate2 = "1.0"
hex = "0.4"
sha-1 = "0.10"
md-5 = "0.10"
base64ct = { version = "1.6", features = ["alloc"] }
crossbeam = "0.8"
serialport = "4.2"
bytes = "1.4"
walkdir = "2.3"
tasd = "0.1"
num_enum = "0.6"
crossterm = "0.26"
ctrlc = "3.2.5"
camino = { version = "1.1", features = ["serde1"] }
emu-runner = "0.1"